--- a/marginal_analysis.rmd
+++ b/marginal_analysis.rmd
@@ -37,7 +37,7 @@ library(dplyr)
 Next, we load the data. Start by loading the clinical data, as this has the outcome (coronary artery disease ('CAD')) we need for our models. 
 
 ```{r load_clinical_dat}
-clinical <- fread("data/GWAStutorial_clinical.csv")
+clinical <- fread("data/penncath.csv")
 # str(clinical) # if you need to remind yourself of what is here
 ```
 
@@ -47,7 +47,7 @@ Next, we need to load the genetic data. For this section, we will work with the 
 # load QC'd data:
 qc_dat <- readRDS('data/gwas-qc.rds')
 # load the bim file
-bim <- fread('data/GWAStutorial.bim')
+bim <- fread('data/penncath.bim')
 ```
 
 If you completed the population structure module, you should load the principal components as well - we need them for our analysis. If you did not work through the population structure module, you can skip this step.  
