--- a/quality_control.rmd
+++ b/quality_control.rmd
@@ -2,6 +2,8 @@
 title: 'GWAS tutorial: Data formats, summary statistics, and quality control'
 author: Patrick Breheny and Tabitha Peter 
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r knitr_setup, include=FALSE, purl=FALSE}
@@ -14,10 +16,15 @@ knitr::knit_hooks$set(small.mar = function(before, options, envir) {
   if (before) par(mar = c(4, 4, .1, .1))
 })
 ```
-```{r setup, include=FALSE}
+
+`R` packages we need to get started 
+
+```{r}
 library(data.table)
-library(magrittr)
+library(dplyr)
+library(ggplot2)
 ```
+
 
 Throughout, I'm going to use the `data.table` package to read in and work with data frames; feel free to use something else. With one exception, the files are just white space delimited text files, anything can open them.
 
@@ -25,8 +32,8 @@ Throughout, I'm going to use the `data.table` package to read in and work with d
 
 This tutorial will use data from the PennCATH study of genetic risk factors for coronary artery disease. Download the data from one of the following sources (the contents are the same):
 
-- [Data (zip)](https://d1ypx1ckp5bo16.cloudfront.net/penncath/penncath.zip): Windows
-- [Data (tar)](https://d1ypx1ckp5bo16.cloudfront.net/penncath/penncath.tar.gz): Mac/Linux
+- [Data (zip)](https://d1d95ugxcvloeo.cloudfront.net/penncath.zip): Windows
+- [Data (tar)](https://d1d95ugxcvloeo.cloudfront.net/penncath.tar.gz): Mac/Linux
 
 Download and unzip/untar the data; you can read the paper as well if you wish:
 
@@ -36,9 +43,9 @@ In what follows, I will assume that the unzipped data files are in a folder call
 
 # File formats
 
-The data are given in "PLINK" format, which is the most common format for chip-based GWAS data (as of this writing!). `PLINK` is an open-source whole genome association analysis toolset designed to perform a range of basic large-scale analyses in a computationally efficient manner. It is worth knowing how to use PLINK, although you can also do most of these things in R.
+The data are given in "PLINK" format, which is the most common format for chip-based GWAS data (as of this writing). `PLINK` is an open-source whole genome association analysis toolset designed to perform a range of basic large-scale analyses in a computationally efficient manner. As part of the toolset, PLINK has its own file formats -- again, these have become the standard format in the GWAS field. Data stored in PLINK format come in 'bundles' -- that is, a PLINK data set consists of a set of files, not just one data file. It is worth knowing how to use the PLINK command line tool to analyze data in these files, but those with no experience on the command line may find that a daunting place to begin. Thankfully, we can also interface with `PLINK` via `R`. The package we will use for this is [bigsnpr](https://privefl.github.io/bigsnpr/).
 
-I'll discuss PLINK the software program later on; for now, I'll just describe the organization of its files.
+Let's take a look at the PLINK file structure, examining what information is stored in each file. 
 
 Among the zipped files are three that are necessary to perform a GWAS, the `.bed`, `.bim`, and `.fam` files.
 
@@ -47,7 +54,7 @@ Among the zipped files are three that are necessary to perform a GWAS, the `.bed
 This contains information on the subjects:
 
 ```{r fam}
-(fam <- fread('data/penncath.fam'))
+head(fam <- fread('data/penncath.fam'))
 ```
 
 There are 1401 rows, one for each subject. The six colums are:
@@ -83,84 +90,153 @@ As you can see, we have `r nrow(bim)` rows here, one for each SNP measured in th
 2. rs# or snp identifier
 3. Genetic distance (morgans)
 4. Base-pair position (bp units)
-5. Allele 1 (usually minor)
-6. Allele 2 (usually major)
+5. Allele 1 (usually minor allele, or 'effect' allele)
+6. Allele 2 (usually major allele)
 
-It is pretty common for column 3 to be ignored, as it is here.
+It is pretty common for column 3 to be ignored, as it is here. Many common analyses do not require base-pair position. 
 
-So, for example, the file tells us that genetic locus rs12565286 is located 721290 bases into chromosome 1, and that most people have a C there, but some have a G.
+So, for example, the file tells us that genetic locus rs12565286 is located 721290 bases into chromosome 1, and that most people have a C there, but some have a G. Of course, "most people" will be relative to a population -- be sure to confirm with collaborators that you have a correct understanding of which allele is considered 'minor', and what population(s) are described in the data. More on the idea of 'population structure' to come in a later module. 
 
 ## `.bed`
 
-Finally, the `.bed` file, which has all the data. This is by far the largest of the three files, as it contains the entire `r nrow(fam)` by `r nrow(bim)` matrix of genotype calls for every subject and every locus. To keep things manageable, this file is encoded in a special binary format -- i.e., you can't just read it in through normal means.
+Finally, the `.bed` file, which has all the data. This is by far the largest of the three files, as it contains the entire `r nrow(fam)` by `r nrow(bim)` matrix of genotype calls for every subject and every locus. To keep things manageable, this file is encoded in a special binary format -- i.e., you can't just open the file in a text editor or load it with something like `r data.table::fread()`. That said, we can convert our PLINK data into a `bigSNP` object (defined in `bigsnpr`) -- this will let us look at our data in our `R` session. 
 
-To access it, you'll have to use specialized applications. I'll discuss two, an R package called `snpStats` and a command-line interface (CLI) called PLINK.
-
-# Software
-
-## snpStats
-
-This is a Bioconductor package. So, you'll have to install it via `BiocManager`
 
 ```{r}
-# install.packages('BiocManager')
-# BiocManager::install('snpStats')
-library(snpStats)
+# install.packages("bigsnpr") # run this if its your first time using this package
+library(bigsnpr)
+library(bigstatsr) # a useful dependency
 ```
 
-To read in data, there is the `read.plink()` function:
+
 
 ```{r read-plink}
-obj <- read.plink('data/penncath')
+# run the line below just once, to create the .rds and .bk files you need 
+# Note: The function assumes that all the files have the same base filename, and differ only in their extension. 
+# snp_readBed("data/penncath.bed")
+
+# now, read in the data to your R session 
+penncath <- snp_attach("data/penncath.rds")
+
+# check out this bigSNP object 
+str(penncath)
 ```
 
-The function assumes that all the files have the same base filename, and differ only in their extension. If this is not the case, then you need to specify the filenames for the `.bed`, `.bim`, and `.fam` files separately.
 
-From here, `snpStats` has a lot of functions. For example, here's a plot (there are 1401 points, one for each subject) of whether the call rate (% of genotype calls that are non-missing) is related to the heterozygosity rate (% of loci that are called AB, as opposed to AA or BB):
+From here, `bigsnpr` has a lot of functions to help us prepare data for analysis -- these functions depend on you having [PLINK 1.9](https://www.cog-genomics.org/plink2) installed somewhere on your local machine. Go to that page, download the files, and save them on your computer (I keep files like this in `~/bin/`). In order to tell whether PLINK installed correctly and is ready to go, type `path/to/plink --version` on either the command line prompt or in 'Terminal' in RStudio, where you fill in the path with the path to where you saved the downloaded files. If things are working correctly, you will see a message that says something like `PLINK v1.90b6.26 64-bit (2 Apr 2022)` -- the `PLINK v1.9` is the key here. 
 
-```{r snp-summary}
-plot(row.summary(obj$genotypes)[c(1,3)])
+# Basic quality control steps 
+
+Once you have PLINK installed, we can start with some simple quality control (QC) steps in `R`: 
+
+### Chromosome check
+
+One helpful first step when getting any genetic data is to address the question: what chromosomes are the SNPs on? In our data, we can see this in the `map` element of our `bigSNP` object: 
+
+```{r}
+penncath$map$chromosome |> table()
 ```
 
-Feel free to read the `snpStats` documentation and explore for yourself, but one standard thing that one is always interested in is to simply convert various SNPs to a regular numeric matrix so that you can analyze them using standard R tools. For example, let's do a Fisher's exact test to see whether CAD is associated with SNP 143:
+We notice here that (1) we do not have any sex chromosomes^[Recall that our example data represents humans; chromosomes are numbered differently in other organisms, so interpret the following comments in the context of the specific data you have], and (2) we do not have any chromosomes with numbers outside 1-23. Sometimes, SNPs with unknown chromosome are labeled with a chromosome of 0. Another [common convention](https://www.cog-genomics.org/plink/1.9/data#irreg_output) is to label mitochondrial variants as having chromosome '26'. This is an issue that can throw off later analysis, so be sure to examine what data you have represented in your PLINK files. 
 
-```{r convert-numeric}
-x <- as(obj$genotypes[,143], 'numeric')
-fisher.test(drop(x), clinical$CAD)
+### Missing data
+
+Any SNP with a lot of missing data (i.e., many samples do not have data for that marker) is probably represented with questionable quality in our data; these poorly-captured SNPs are often excluded from analysis. Likewise, any sample with lots of missing data suggests that there may be issues with the processing of that sample. Looking at our genotype data (i.e., what is in our .bed file), we see that some of our SNPs have missing values. 
+
+```{r}
+class(penncath$genotypes) # note: this is a file-backed object
+?bigstatsr::big_counts # handy function to summarize data 
+# take a look at what this does 
+big_counts(penncath$genotypes, ind.row = 1:10, ind.col = 1:10)
+# summarize genotype data by *SNP*
+snp_stats <- big_counts(penncath$genotypes)
+dim(snp_stats) # 4th row has NA counts 
+boxplot(snp_stats[4,]) 
+summary(snp_stats[4,]) 
 ```
 
-A GWAS is then basically just a big loop where we repeat this analysis for every single SNP (although there are of course statistical issues that come up in doing so).
+There are definitely some SNPs with lots of missing values -- at least one SNP is missing across all 1,401 samples! A common practice is to exclude SNPs with >5% or >10% missing data. We'll actually do the subsetting a little later, right now we're just exploring.
 
-Side note: In general, code like the above is risky, as it assumes that the clinical spreadsheet is in the same order as the `.fam` and `.bed` files. This happens to be the case here:
+We also need to consider any samples that have high proportions of missing values: 
 
-
-```{r check}
-all.equal(rownames(x), as.character(clinical$FamID))
+```{r}
+# summarize genotype data by *sample* 
+sample_stats <- big_counts(penncath$genotypes, byrow = TRUE)
+# cell [1,1] is showing the # of people with "0" genotype at the 1st SNP
+sample_stats[, 1:10]
+boxplot(sample_stats[4,])
+summary(sample_stats[4,])
 ```
 
-But you should get in the habit of explicitly checking for things like this by including lines like this in your code:
+We notice that there are no outlier values in the number of NA values per person -- if there were outliers, we would need to filter out samples that have a high proportion of missing data. 
 
-```{r check-test}
-stopifnot(all.equal(rownames(obj$genotypes), as.character(clinical$FamID)))
+### Heterozygosity check 
+
+If an individual had a ton of A/B calls but no A/A or B/B calls, or vice versa, that would likely indicate something was wrong in that sample -- we would typically expect all samples to have some heterozygous calls and some homozygous calls. 
+
+```{r zygosity}
+allele_dat <- sweep(x = sample_stats[1:3,], 
+                    # ^ leave off 4th row -- don't count NAs here
+                    MARGIN = 1,
+                    STATS = c(0, 1, 0),
+                    FUN = "*") |> colSums()
+
+boxplot(allele_dat/ncol(snp_stats))
+hist(allele_dat/ncol(snp_stats),
+     main = "Zygosity",
+     xlab = "Proportion of samples which are heterozygous") # should be bell-curved shaped
 ```
 
-This will trigger an error if the condition is not met, and do nothing otherwise.
+No big outliers here... that's a good sign.
 
-I'll write more for next week....
+### Minor allele frequency (MAF) filtering
 
-## PLINK
+As a first step, let's look at which SNPs have minor alleles that occur very rarely -- in a typical GWAS, we will need to exclude SNPs that have low variation. We see there are some SNPs for which all 1401 samples have the A/A alleles, or the major/major alleles. For analysis purposes, we typically need to exclude such SNPs in which variation is rare.
 
-NOTE: This is incomplete. Hopefully I'll add to it later, but in the meantime, I'm just pointing you to the (rather good) PLINK documentation and hoping you can figure things out on your own!
+```{r}
+hist(snp_stats[1,])
+summary(snp_stats[1,])
+```
 
-There are three versions of PLINK (in order from old-and-stable to new-and-fast-but-sometimes-slightly-incomplete):
+### Hardy-Weinberg equilibrium filtering
 
-* [PLINK Homepage (1.07)](http://zzz.bwh.harvard.edu/plink)
+< Will come back here >
 
-* [PLINK Homepage (1.9)](https://www.cog-genomics.org/plink2)
+### Relatedness check
 
-* [PLINK Homepage (2.0)](https://www.cog-genomics.org/plink2.0)
+In summary, here are the basic QC steps that (almost) all GWAS need to consider: 
 
-As an independent learning assignment, it would be good to familiarize yourself with how PLINK works and to carry out some of the same analyses in R and PLINK. In particular, there are a few things that I think are easier in PLINK than R (or maybe they exist in some package I'm not aware of), so a useful skill is to be able to do some analysis in PLINK but then read that data back into R and merge it in with the rest of an analysis.
+- We need to filter out SNPs that have a really low minor allele frequency
+
+- We need to filter out SNPs that have a lot of missing values (e.g., SNPs that a large proportion of observations/samples do not have recorded)
+
+- We need to fileter out samples that have a lot of missing values (e.g., samples that had poor quality in upstream data collection/analysis)
+
+- We need to filter out SNPs that are not in Hardy-Weinberg equilibrium 
+
+- For simplicity, we want to examine autosomes only (no sex chromosomes), so we need to filter out data down to just SNPs from chromosomes 1-22
+
+We can do all of these steps in one command below: 
+
+```{r}
+path_to_qc_penncath <- snp_plinkQC(
+  plink.path = "~/bin/plink", # you will need to change this according to your machine!
+  prefix.in = "data/penncath_clean",
+  prefix.out = "data/qc_penncath",
+  maf = 0.01, # filter out SNPs with MAF < 0.01
+  geno = 0.1, # filter out SNPs missing more than 10% of data
+  mind = 0.1, # filter out SNPs missing more than 10% of data,
+  hwe = 1e-10, # filter out SNPs that have p-vals below this threshold for HWE test
+  autosome.only = TRUE # we want chromosomes 1-22 only
+)
+```
+
+The command above is a wrapper for PLINK, and so it will print out messages to the console, so you can follow along with what PLINK is doing. "Under the hood", PLINK is applying all the filters we want and creating a new set of bed/bim/fam files with the prefix "qc_penncath." We will use these QC'd files in our upcoming analysis. 
+
+# Advanced quality control steps
+
+
+# ---- OLD ---------
 
 # Quality control
 
@@ -186,26 +262,6 @@ ggbox <- function (X, xlab = "ind", ylab = "values") {
 
 I'm also defining a little shortcut function for box plots.
 
-## Chromosome check
-
-This isn't exactly a QC step, but extremely helpful to do as a first step when getting any genetic data: what chromosomes are the SNPs on?
-
-```{r chr}
-table(obj$map$chromosome)
-```
-
-For the most part, the chromosomes are ordered by size, so chromosomes 1 and 2 are much bigger than (and have many more SNPs than) chromosomes 21 and 22. This particular data set only contains SNPs from the "autosomal" chromosomes (1-22); we do not have any data on X and Y chromosomes. Also, there are no "strange" chromosomes, such as MT (the mitochondrial chromosome), XY (the pseudo-autosomal region of chromosome X), and 0 (SNPs that cannot be mapped to any chromosomes, which can happen for a variety of reasons). Depending on the scientific goal, we may wish to subset our analysis down to include only the autosomal chromosomes, although this isn't necessary here since it has already been done.
-
-## Missing data
-
-Any SNP with a lot of missing data is probably questionable; these SNPs are often excluded from analysis (although we will talk about other approaches later). Likewise, any sample with lots of missing data suggests that there may be issues with the processing of that sample.
-
-```{r miss, h=4, w=4, out.width='50%', fig.align='default', fig.show='hold'}
-ggbox(rs$Call.rate, 'Individuals', 'Call rate')
-ggbox(cs$Call.rate, 'SNPs', 'Call rate')
-```
-
-Individuals look good -- SNPs, on the other hand, there are definitely some SNPs with lots of missing values. A common practice is to exclude SNPs with >5% or >10% missing data. We'll actually do the subsetting a little later, right now we're just exploring.
 
 ## Minor allele frequency
 
@@ -276,15 +332,8 @@ table(p_hwe < 10^(-10))
 table(as(obj$genotypes[,which.max(cs$z.HWE)], 'character'))
 ```
 
-## Heterozygosity
 
-A somewhat similar idea, but applied to individuals instead of SNPs (if an individual had a ton of A/B calls but no A/A or B/B calls, or vice versa, that would indicate something was wrong):
 
-```{r zygosity}
-ggbox(rs$Heterozygosity)
-```
-
-No big outliers here, though.
 
 ## Relatedness
 
