--- a/quality_control.rmd
+++ b/quality_control.rmd
@@ -81,7 +81,8 @@ As you can see, we've got the `FamID` to match this spreadsheet up with the gene
 The `.bim` file, by contrast, contains information on the genetic loci (SNPs):
 
 ```{r bim}
-(bim <- fread('data/penncath.bim'))
+bim <- fread('data/penncath.bim')
+head(bim)
 ```
 
 As you can see, we have `r nrow(bim)` rows here, one for each SNP measured in the study. The columns are:
@@ -99,13 +100,13 @@ So, for example, the file tells us that genetic locus rs12565286 is located 7212
 
 ## `.bed`
 
-Finally, the `.bed` file, which has all the data. This is by far the largest of the three files, as it contains the entire `r nrow(fam)` by `r nrow(bim)` matrix of genotype calls for every subject and every locus. To keep things manageable, this file is encoded in a special binary format -- i.e., you can't just open the file in a text editor or load it with something like `r data.table::fread()`. That said, we can convert our PLINK data into a `bigSNP` object (defined in `bigsnpr`) -- this will let us look at our data in our `R` session. 
+Finally, the `.bed` file, which has all the data. This is by far the largest of the three files, as it contains the entire `r nrow(fam)` by `r nrow(bim)` matrix of genotype calls for every subject and every locus. To keep things manageable, this file is encoded in a special binary format -- i.e., you can't just open the file in a text editor or load it with something like `r ?data.table::fread()`. That said, we can convert our PLINK data into a `bigSNP` object (defined in `bigsnpr`) -- this will let us look at our data in our `R` session. 
 
 
 ```{r}
 # install.packages("bigsnpr") # run this if its your first time using this package
 library(bigsnpr)
-library(bigstatsr) # a useful dependency
+library(bigstatsr) # a useful dependency of bigsnpr
 ```
 
 
@@ -113,10 +114,10 @@ library(bigstatsr) # a useful dependency
 ```{r read-plink}
 # run the line below just once, to create the .rds and .bk files you need 
 # Note: The function assumes that all the files have the same base filename, and differ only in their extension. 
-# snp_readBed("data/penncath.bed")
+# snp_readBed("data/penncath_clean.bed")
 
 # now, read in the data to your R session 
-penncath <- snp_attach("data/penncath.rds")
+penncath <- snp_attach("data/penncath_clean.rds")
 
 # check out this bigSNP object 
 str(penncath)
@@ -124,6 +125,8 @@ str(penncath)
 
 
 From here, `bigsnpr` has a lot of functions to help us prepare data for analysis -- these functions depend on you having [PLINK 1.9](https://www.cog-genomics.org/plink2) installed somewhere on your local machine. Go to that page, download the files, and save them on your computer (I keep files like this in `~/bin/`). In order to tell whether PLINK installed correctly and is ready to go, type `path/to/plink --version` on either the command line prompt or in 'Terminal' in RStudio, where you fill in the path with the path to where you saved the downloaded files. If things are working correctly, you will see a message that says something like `PLINK v1.90b6.26 64-bit (2 Apr 2022)` -- the `PLINK v1.9` is the key here. 
+
+Note: in PLINK files, missing values are often recorded as "-9" - the `bigsnpr` package follows this convention as well. This is what you will see in the 'map' element of the `bigSNP` object -- where allele codes are missing, "-9" is inserted. 
 
 # Basic quality control steps 
 
@@ -155,7 +158,7 @@ boxplot(snp_stats[4,])
 summary(snp_stats[4,]) 
 ```
 
-There are definitely some SNPs with lots of missing values -- at least one SNP is missing across all 1,401 samples! A common practice is to exclude SNPs with >5% or >10% missing data. We'll actually do the subsetting a little later, right now we're just exploring.
+There are definitely some SNPs with lots of missing values -- at least one SNP is missing across all 1,401 samples! A common practice is to exclude SNPs with >10% missing data. We'll actually do the subsetting a little later, right now we're just exploring.
 
 We also need to consider any samples that have high proportions of missing values: 
 
@@ -198,30 +201,43 @@ hist(snp_stats[1,])
 summary(snp_stats[1,])
 ```
 
+The histogram and summary shows that there are some SNPs for which few, if any, samples have a minor allele. We will need to filter out these rare variants. 
+
 ### Hardy-Weinberg equilibrium filtering
 
-< Will come back here >
+The [Hardy-Weinberg principle](https://en.wikipedia.org/wiki/Hardy-Weinberg_principle) states that under the assumption of random mating, the distribution of genotypes should follow a binomial distribution with probability $\pi$ equal to the MAF. If this doesn't happen, this is an indication that either:
+
+1. There was a genotyping error for this SNP, or
+2. Mating is not random
+
+In the real world, mating is of course not random, making it difficult to exclude SNPs on the basis of HWE. The usual recommendation is to exclude a SNP only if HWE is hugely violated (e.g., $p < 10^{-10}$ for a test of whether the data follow a binomial distribution). We will use this filter as a criteria.
 
 ### Relatedness check
 
+Another common QC check that people apply is to see whether anyone in their data set is related to each other (i.e., their genomes are far more similar than the genomes of two unrelated people). This makes sense, as most statistical methods assume independent samples and if you have, say, two sisters in the analysis, they're not really independent. However, the tools for assessing relatedness are related to methods for assessing population structure, which is a complex topic that I'll discuss in the ['structure' module](docs/population_structure.html) of the tutorial.
+
+
+### Summary & implementation
 In summary, here are the basic QC steps that (almost) all GWAS need to consider: 
 
-- We need to filter out SNPs that have a really low minor allele frequency
+(1) We need to check the chromosomes we have represented in our data
 
-- We need to filter out SNPs that have a lot of missing values (e.g., SNPs that a large proportion of observations/samples do not have recorded)
+(2) We need to filter out samples that have a lot of missing values (e.g., samples that had poor quality in upstream data collection/analysis)
 
-- We need to fileter out samples that have a lot of missing values (e.g., samples that had poor quality in upstream data collection/analysis)
+(3) We need to check for heterozygosity, and filter out samples that are clear outliers
 
-- We need to filter out SNPs that are not in Hardy-Weinberg equilibrium 
+(4) We need to filter out SNPs that have a really low minor allele frequency
 
-- For simplicity, we want to examine autosomes only (no sex chromosomes), so we need to filter out data down to just SNPs from chromosomes 1-22
+(5) We need to filter out SNPs that are far outside Hardy-Weinberg equilibrium 
 
-We can do all of these steps in one command below: 
+(6) We need to consider relatedness in our data -- both the relatedness that is known as well as any latent relationship structure(s).
 
-```{r}
+We can do steps (1), (2), (4), and (5) in one command below: 
+
+```{r, eval=FALSE}
 path_to_qc_penncath <- snp_plinkQC(
   plink.path = "~/bin/plink", # you will need to change this according to your machine!
-  prefix.in = "data/penncath_clean",
+  prefix.in = "data/penncath_clean", # TODO: move 
   prefix.out = "data/qc_penncath",
   maf = 0.01, # filter out SNPs with MAF < 0.01
   geno = 0.1, # filter out SNPs missing more than 10% of data
@@ -233,72 +249,15 @@ path_to_qc_penncath <- snp_plinkQC(
 
 The command above is a wrapper for PLINK, and so it will print out messages to the console, so you can follow along with what PLINK is doing. "Under the hood", PLINK is applying all the filters we want and creating a new set of bed/bim/fam files with the prefix "qc_penncath." We will use these QC'd files in our upcoming analysis. 
 
+Step (3) we have done by visual inspection -- in this data set, that is all we need. Step (6) requires quite a bit of explanation, so this step has [its own module](docs/population_structure.html) in this tutorial. 
+
+So, we're getting rid of about 100,000 SNPs and keeping about 750,000.
+
+Now, let's actually do the subsetting. **IMPORTANT:** The key thing to remember here is that when you subset genetic data in PLINK files, you need to subset both the `map` object and the genotypes -- if you don't, these objects will no longer match and you will end up with a devastating row mismatch problem. If you are using `PLINK` (any version) on the command line or `bigsnpr` in `R`, then this is automatically taken care of for you. However, if you are reading in the .bim/.fam files as data frames (as we did at the beginning), then you would need to make sure you subset both files. 
+
+Using our QC'd data in `qc_penncath`, we will continue in the next section with [imputation](docs/imputation.html)
+
 # Advanced quality control steps
-
-
-# ---- OLD ---------
-
-# Quality control
-
-The first step in any GWAS is to examine the data for potential problems. You don't want to carry out a GWAS, think you have an exciting result, then discover that it was all just an artifact of bad data. This is a fairly "clean" data set, so it's not really ideal for showing these steps, but I'll go through them anyway. There is also a sample data set in the `snpStats` package with some (at least one) bad samples; might be worth checking that one out as well.
-
-```{r snpstats-data}
-data(for.exercise)
-snps.10
-```
-
-Most of these QC steps involve calculating summaries at the individual ("row") level or the SNP ("column") level:
-
-```{r summaries}
-rs <- row.summary(obj$genotypes)
-cs <- col.summary(obj$genotypes)
-ggbox <- function (X, xlab = "ind", ylab = "values") {
-    if (!is.data.frame(X)) X <- as.data.frame(X)
-    ggplot2::ggplot(utils::stack(X), ggplot2::aes_string("ind", 
-        "values")) + ggplot2::geom_boxplot() + ggplot2::xlab(xlab) + 
-        ggplot2::ylab(ylab)
-}
-```
-
-I'm also defining a little shortcut function for box plots.
-
-
-## Minor allele frequency
-
-Minor allele frequency is the percent of alleles that belong to less common category. For example:
-
-```{r maf-example}
-(Tab <- table(as(obj$genotypes[,143], 'numeric')))
-(2*Tab[1] + Tab[2]) / (2*sum(Tab))
-cs[143,]$MAF
-```
-
-Excluding SNPs on the basis of minor allele frequency is a bit controversial. It's done, and it makes sense, but has nothing to do with quality control -- there is no reason to think there are any errors in the data. The main justification is statistical:
-
-* If MAF is low, power is low (i.e., don't spend multiple testing corrections on tests that are unlikely to find anything anyway)
-* Some statistical methods perform badly with low MAF (e.g., the $chi^2$-test)
-
-An appropriate cutoff definitely depends on sample size -- the larger the sample, the greater your ability to include rare SNPs. Let's look at the distributon of MAFs:
-
-```{r maf}
-hist(cs$MAF, breaks=seq(0, 0.5, 0.01), border='white', col='gray', las=1)
-```
-
-With a sample size of `r nrow(obj$genotypes)`, I would say a reasonable MAF would be something like 0.001 (0.1%).
-
-```{r maf-exclude}
-# How many SNPs would this exclude?
-table(cs$MAF < 0.001)
-# Would we really learn anything from analyzing a SNP like this?
-table(as(obj$genotypes[,62], 'numeric'))
-```
-
-Finally, it is worth noting that no matter what the sample size, monomorphic SNPs (i.e., SNPs that show no genetic variation whatsoever in the sample) are usually problematic and should always be removed. Some code crashes when monomorphic SNPs are included; even if this weren't the case, these SNPs cannot possibly be informative in a genome-wide association study.
-
-```{r monomorph}
-table(cs$MAF == 0)                 # >26000 monomorphic SNPs
-obj$map[head(which(cs$MAF==0)),]   # Note that "allele.1' is missing for these SNPs
-```
 
 ## Sex check
 
@@ -311,58 +270,11 @@ In general, though, one usually uses PLINK for this. The relevant command is cal
 Note that there are no discrepancies between the sex recorded in `clinical.csv` and the one recorded in the `.fam` file:
 
 ```{r check-sex}
-table(obj$fam$sex, clinical$sex)
+table(penncath$fam$sex, clinical$sex)
 ```
 
-## Hardy-Weinberg equilibrium
+In our data, this is sufficient for us to know we are good to go. 
 
-The [Hardy-Weinberg principle](https://en.wikipedia.org/wiki/Hardy-Weinberg_principle) states that under the assumption of random mating, the distribution of genotypes should follow a binomial distribution with probability $\pi$ equal to the MAF. If this doesn't happen, this is an indication that either:
+## Pruning, clumping, and LD filtering 
 
-1. There was a genotyping error for this SNP, or
-2. Mating is not random
-
-In the real world, mating is of course not random, making it difficult to exclude SNPs on the basis of HWE. The usual recommendation is to exclude a SNP only if HWE is hugely violated (e.g., $p < 10^{-10}$ for a test of whether the data follow a binomial distribution).
-
-```{r hwe}
-ggbox(cs$z.HWE)  # Mostly near zero, but some huge outliers
-p_hwe <- 2*pnorm(-abs(cs$z.HWE))
-table(p_hwe < 10^(-10))
-# This seems utterly bizarre -- why would there be so many A/B's, but
-# no A/A's or B/B's?  Something is definitely wrong:
-table(as(obj$genotypes[,which.max(cs$z.HWE)], 'character'))
-```
-
-
-
-
-## Relatedness
-
-Another common QC check that people apply is to see whether anyone in their data set is related to each other (i.e., their genomes are far more similar than the genomes of two unrelated people). This makes sense, as most statistical methods assume independent samples and if you have, say, two sisters in the analysis, they're not really independent. However, the tools for assessing relatedness are related to methods for assessing population structure, which is a complex topic that I'll discuss in the 'structure' module of the tutorial.
-
-## Pipeline
-
-OK, now that we've surveyed all these QC concepts, let's actually do some filtering. I might choose to do something like this:
-
-```{r qc-pipe}
-keep <- cs$MAF > 0.001 &
-  cs$Call.rate > 0.9 &
-  abs(cs$z.HWE) < 6.5
-table(keep)
-```
-
-So, we're getting rid of about 100,000 SNPs and keeping about 750,000.
-
-Now, let's actually do the subsetting. **IMPORTANT:** The key thing to remember here is that you need to subset both the `map` object and the genotypes -- if you don't, these objects will no longer match and you will end up with a devastating row mismatch problem.
-
-```{r subset-1}
-(obj$genotypes <- obj$genotypes[, keep])
-obj$map <- obj$map[keep, ]
-```
-
-In principle, we might also be throwing some subjects out at this point, but in this particular example, none of the subjects looked questionable. Again, if throwing away subjects, you need to remember to also subset the `fam` object and the clinical data table.
-
-Let's save this QC'd data set for future use in downstream analyses:
-
-```{r save, eval=FALSE}
-saveRDS(obj, 'data/gwas-qc.rds')
-```
+SNPs which are close to one another in base-pair position are often in [linkage disequilibrium](https://www.sciencedirect.com/topics/neuroscience/linkage-disequilibrium#:~:text=Linkage%20disequilibrium%2C%20the%20phenomenon%20whereby,proxy%20for%20the%20risk%20variant.) (LD) with each other -- we say, 'the SNPs are in LD'. When SNPs are in LD, this can have a notable impact on analysis, particularly when the approach is a marginal analysis (i.e., testing one SNP at a time). [Florian Privé](https://privefl.github.io/), author of the `bigstatsr` and `bigsnpr` packages, has written some good [vignettes](https://privefl.github.io/bigsnpr/articles/pruning-vs-clumping.html) on how and when to use pruning/clumping as a QC step to address LD. For now, I refer you there -- I hope to do some of my own writing on the subject one day. 
